--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Katherine Jouett</title>
+  <title>Beck</title>
   <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   <link rel="icon" href="./resources/kjlogo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;700&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Katherine Jouett</h1>
+    <h1>Beck</h1>
     <nav>
       <ul>
-        <li><a href="#me">About Me</a></li>
-        <li><a href="#contact">Projects</a></li>
+        <li><a href="#film">Film</a></li>
+        <li><a href="#video">Video</a></li>
+        <li><a href="#shoots">Shoots</a></li>
+        <li><a href="#bio">Bio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <div class='banner' id="me">
-      <h2>Programmer, crafter, crossword enthusiast</h2>
+      <h2>Photographer and videographer</h2>
+    </div>
+    <div id='galleries'>
+      <ul>
+        <li class='gallery-block'><a href="#film"><img src='resources/images/landscape.png' class='gallery-icon'></a></li>
+        <li class='gallery-block'><a href="#video"><img src='resources/images/concert.png' class='gallery-icon'></a></li>
+        <li class='gallery-block'><a href="#shoots"><img src='resources/images/pinkshoot.png' class='gallery-icon'></a></li>
+        <li class='gallery-block'><a href="#bio"><img src='resources/images/beckbeanie.png' class='gallery-icon'></a></li>
+      </ul>
     </div>
     <div id='contact'>
       <h3>Learn more:</h3>
       <ul>
-        <li><a href="https://www.linkedin.com/in/katherine-jouett-6aa50a188/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/katejouett" target="_blank">GitHub</a></li>
-        <li><a href="resources/resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
+        <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
       </ul>
 
     </div>
   </main>
-  <footer><h5>Copyright Katherine Jouett 2020&copy;</h5></footer>
+  <footer><h5>Copyright Katherine Jouett 2022&copy;</h5></footer>
     
 
 </body>
