replace social media buttons with icons

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <title>Beck</title>
   <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   <link rel="icon" href="./resources/kjlogo.ico" type="image/x-icon">
+  <script src="https://kit.fontawesome.com/a1d5fd43c4.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;700&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Beck</h1>
+    <div id='nameplate'>
+      <h1>Beck</h1><h3>Videographer and photographer</h3>
+    </div>
     <nav>
       <ul>
         <li><a href="#film">Film</a></li>
@@ -20,9 +23,7 @@
     </nav>
   </header>
   <main>
-    <div class='banner' id="me">
-      <h2>Photographer and videographer</h2>
-    </div>
+    <div class='banner' id="me"></div>
     <div id='galleries'>
       <ul>
         <li class='gallery-block'><a href="#film"><img src='resources/images/landscape.png' class='gallery-icon'></a></li>
@@ -32,11 +33,11 @@
       </ul>
     </div>
     <div id='contact'>
-      <h3>Learn more:</h3>
+      <h3>Follow me online:</h3>
       <ul>
-        <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
-        <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+        <li><i class="fa fa-linkedin-square"><a href="https://www.linkedin.com" target="_blank"></a></i></li>
+        <li><i class="fa fa-twitter-square"><a href="https://www.twitter.com" target="_blank"></a></i></li>
+        <li><i class="fa fa-instagram"><a href="https://www.instagram.com" target="_blank"></a></i></li>
       </ul>
 
     </div>
