--- a/index.html
+++ b/index.html
@@ -10,34 +10,36 @@
 <body>
   <header>
     <div id='nameplate'>
-      <h1>Beck</h1><h3>Videographer and photographer</h3>
+      <a href = index.html>
+        <h1>Beck</h1><h3>Videographer and photographer</h3>
+      </a>
     </div>
     <nav>
       <ul>
-        <li><a href="#film">Film</a></li>
-        <li><a href="#video">Video</a></li>
-        <li><a href="#shoots">Shoots</a></li>
-        <li><a href="#bio">Bio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html#film">Film</a></li>
+        <li><a href="index.html#video">Video</a></li>
+        <li><a href="index.html#shoots">Shoots</a></li>
+        <li><a href="bio.html">Bio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class='banner' id="me"></div>
+    <div class='banner' id="me"><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h2></div>
     <div id='galleries'>
       <ul>
         <li class='gallery-block'><a href="#film"><img src='resources/images/landscape.png' class='gallery-icon'></a></li>
         <li class='gallery-block'><a href="#video"><img src='resources/images/concert.png' class='gallery-icon'></a></li>
         <li class='gallery-block'><a href="#shoots"><img src='resources/images/pinkshoot.png' class='gallery-icon'></a></li>
-        <li class='gallery-block'><a href="#bio"><img src='resources/images/beckbeanie.png' class='gallery-icon'></a></li>
+        <li class='gallery-block'><a href="bio.html"><img src='resources/images/beckbeanie.png' class='gallery-icon'></a></li>
       </ul>
     </div>
-    <div id='contact'>
+    <div id='contact-banner'>
       <h3>Follow me online:</h3>
       <ul>
-        <li><i class="fa fa-linkedin-square"><a href="https://www.linkedin.com" target="_blank"></a></i></li>
-        <li><i class="fa fa-twitter-square"><a href="https://www.twitter.com" target="_blank"></a></i></li>
-        <li><i class="fa fa-instagram"><a href="https://www.instagram.com" target="_blank"></a></i></li>
+        <li><a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin-square" aria-label="Click to visit my LinkedIn profile"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" aria-label="Click to visit my Twitter profile"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-label="Click to visit my Instagram profile"></i></a></li>
       </ul>
 
     </div>
